; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/extr_glx.c_CheckGLX.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/extr_glx.c_CheckGLX.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"GLX extension not available\00", align 1
@.str.1 = private unnamed_addr constant [36 x i8] c"GLX extension version %d.%d unknown\00", align 1
@.str.2 = private unnamed_addr constant [36 x i8] c"GLX extension version %d.%d too old\00", align 1
@.str.3 = private unnamed_addr constant [34 x i8] c"using GLX extension version %d.%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @CheckGLX to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CheckGLX(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %7, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @glXQueryVersion(i32* %8, i32* %5, i32* %6)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 (i32*, i8*, ...) @msg_Dbg(i32* %12, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %37

14:                                               ; preds = %2
  %15 = load i32, i32* %5, align 4
  %16 = icmp ne i32 %15, 1
  br i1 %16, label %17, label %22

17:                                               ; preds = %14
  %18 = load i32*, i32** %3, align 8
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call i32 (i32*, i8*, ...) @msg_Dbg(i32* %18, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0), i32 %19, i32 %20)
  br label %36

22:                                               ; preds = %14
  %23 = load i32, i32* %6, align 4
  %24 = icmp slt i32 %23, 3
  br i1 %24, label %25, label %30

25:                                               ; preds = %22
  %26 = load i32*, i32** %3, align 8
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* %6, align 4
  %29 = call i32 (i32*, i8*, ...) @msg_Dbg(i32* %26, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0), i32 %27, i32 %28)
  br label %35

30:                                               ; preds = %22
  %31 = load i32*, i32** %3, align 8
  %32 = load i32, i32* %5, align 4
  %33 = load i32, i32* %6, align 4
  %34 = call i32 (i32*, i8*, ...) @msg_Dbg(i32* %31, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.3, i64 0, i64 0), i32 %32, i32 %33)
  store i32 1, i32* %7, align 4
  br label %35

35:                                               ; preds = %30, %25
  br label %36

36:                                               ; preds = %35, %17
  br label %37

37:                                               ; preds = %36, %11
  %38 = load i32, i32* %7, align 4
  ret i32 %38
}

declare dso_local i32 @glXQueryVersion(i32*, i32*, i32*) #1

declare dso_local i32 @msg_Dbg(i32*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
